Ajout du bouton commander manquant

--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -111,6 +111,9 @@
                             <div>23€</div>
                         </div>
                     </article>
+                    <div>
+                        <button>Commander</button>
+                    </div>
                 </div>
             </section>            
         </main>
