--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Ohmyfood</title>
+
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/5f93c80563.js" crossorigin="anonymous"></script>
 </head>
 
@@ -135,19 +139,19 @@
             </section>  
        </main>
        <footer>
-              <div>
-                <div>
-                    <img src="assets/images/logo/ohmyfood@2x.svg">
-                </div>
-                <div>
-                    <ul>
-                        <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                        <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                        <li><a href="#">Mention légales</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-              </div>  
+            <div>
+            <div>
+                <img src="assets/images/logo/ohmyfood@2x.svg">
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                    <li><a href="#">Mention légales</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            </div>  
        </footer> 
     </div>
 </body>
