--- a/index.html
+++ b/index.html
@@ -29,131 +29,120 @@
                 <div class="explorer-restaurant">
                     <h1 class="explorer-restaurant__title">Réserver le menu qui vous convient</h1>
                     <p class="explorer-restaurant__text">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button class="explorer-restaurant__btn">Explorer nos restaurants</button>
+                    <a href="#anchor-mainrestaurants" class="explorer-restaurant__btn">Explorer nos restaurants</a>
                 </div>
             </section>  
             <section class="functioning">
                 <div>
                     <h2>Fonctionnement</h2>
                 </div>
-                <div>
-                    <!-- remplacer les %% de div span et i-->
-                    <div class="%1%">
-                        <span class="%2%">1</span>
-                        <i class="%3% fa-solid fa-mobile-screen-button"></i>
+                <div class="functioning__steps">
+                    <div class="functioning__cards">
+                        <span class="functioning__cards--number">1</span>
+                        <i class="functioning__cards--icon fa-solid fa-mobile-screen-button"></i>
                         <p>Choisissez un restaurant</p>
                     </div>   
-                    <div class="%1%">
-                        <span class="%2%">2</span>
-                        <i class="%3% fa-solid fa-list-ul"></i>
+                    <div class="functioning__cards">
+                        <span class="functioning__cards--number">2</span>
+                        <i class="functioning__cards--icon fa-solid fa-list-ul"></i>
                         <p>Composez votre menu</p>
                     </div>
-                    <div class="%1%">
-                        <span class="%2%">3</span>
-                        <i class="%3% fa-solid fa-store"></i>
+                    <div class="functioning__cards">
+                        <span class="functioning__cards--number">3</span>
+                        <i class="functioning__cards--icon functioning__cards--icolor fa-solid fa-store"></i>
                         <p>Déguster au restaurant</p>
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="restaurant">
                 <div>
-                    <h2>Restaurants</h2>
+                    <h2 id="anchor-mainrestaurants">Restaurants</h2>
                 </div>
-                <div>
-                    <article>
-                        <a href="#">
-                            <div>
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat du restaurant">
-                            <span>Nouveau</span>
+                <div class="restautant-cards">
+                    <article class="restaurant-card">
+                        <a href="#" class="restaurant-card__link">
+                            <div class="restaurant-card__image">
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat de La palette du goût">
+                            <span class="restaurant-card__new-label">Nouveau</span>
                             </div>
-                            <div>
-                                <div>
-                                    <div>
-                                        <h3>La palette du goût</h3>
-                                        <p>Ménilmontant</p>
+                            <div class="restaurant-card__info">                               
+                                    <div class="restaurant-card__details">
+                                        <h3 class="restaurant-card__name">La palette du goût</h3>
+                                        <p class="restaurant-card__location">Ménilmontant</p>
                                     </div>
-                                    <div>
-                                    <span><i class="fa-regular fa-heart"></i></span>
-                                    </div>
-                                </div>
+                                    <div class="restaurant-card__favorite">
+                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></span>
+                                    </div>                                
                             </div>
                         </a>
                     </article>
-                    <article>
-                        <a href="#">
-                            <div>
-                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat du restaurant">
-                            <span>Nouveau</span>
+                    <article class="restaurant-card">
+                        <a href="#" class="restaurant-card__link">
+                            <div class="restaurant-card__image">
+                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat de La note enchantée">
+                            <span class="restaurant-card__new-label">Nouveau</span>
                             </div>
-                            <div>
-                                <div>
-                                    <div>
-                                        <h3>La note enchantée</h3>
-                                        <p>Charonne</p>
+                            <div class="restaurant-card__info">                               
+                                    <div class="restaurant-card__details">
+                                        <h3 class="restaurant-card__name">La note enchantée</h3>
+                                        <p class="restaurant-card__location">Charonne</p>
                                     </div>
-                                    <div>
-                                    <span><i class="fa-regular fa-heart"></i></span>
-                                    </div>
-                                </div>
+                                    <div class="restaurant-card__favorite">
+                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></i></span>
+                                    </div>                                
                             </div>
                         </a>
                     </article>
-                    <article>
-                        <a href="#">
-                            <div>
-                            <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat du restaurant">
-                            <span>Nouveau</span>
+                    <article class="restaurant-card">
+                        <a href="#" class="restaurant-card__link">
+                            <div class="restaurant-card__image">
+                            <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat d'À la française">
                             </div>
-                            <div>
-                                <div>
-                                    <div>
-                                        <h3>À la française</h3>
-                                        <p>Cité Rouge</p>
+                            <div class="restaurant-card__info">                               
+                                    <div class="restaurant-card__details">
+                                        <h3 class="restaurant-card__name">À la française</h3>
+                                        <p class="restaurant-card__location">Cité rouge</p>
                                     </div>
-                                    <div>
-                                    <span><i class="fa-regular fa-heart"></i></span>
-                                    </div>
-                                </div>
+                                    <div class="restaurant-card__favorite">
+                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></span>
+                                    </div>                                
                             </div>
                         </a>
                     </article>
-                    <article>
-                        <a href="#">
-                            <div>
-                            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat du restaurant">
-                            <span>Nouveau</span>
+                    <article class="restaurant-card">
+                        <a href="#" class="restaurant-card__link">
+                            <div class="restaurant-card__image">
+                            <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat de Le délice des sens">
                             </div>
-                            <div>
-                                <div>
-                                    <div>
-                                        <h3>Le délice des sens</h3>
-                                        <p>Folie-Méricourt</p>
+                            <div class="restaurant-card__info">                               
+                                    <div class="restaurant-card__details">
+                                        <h3 class="restaurant-card__name">Le délice des sens</h3>
+                                        <p class="restaurant-card__location">Folie-Méricourt</p>
                                     </div>
-                                    <div>
-                                    <span><i class="fa-regular fa-heart"></i></span>
-                                    </div>
-                                </div>
+                                    <div class="restaurant-card__favorite">
+                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></span>
+                                    </div>                                
                             </div>
                         </a>
                     </article>
                 </div>
             </section>  
        </main>
-       <footer>
-            <div>
-            <div>
-                <img src="assets/images/logo/ohmyfood@2x.svg">
+       <footer class="footer">
+        <div class="footer__content">
+            <div class="footer__logo">
+                <img src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
             </div>
-            <div>
-                <ul>
-                    <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                    <li><a href="#">Mention légales</a></li>
-                    <li><a href="#">Contact</a></li>
+            <div class="footer__links">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link"><i class="footer__icon fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Mentions légales</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
                 </ul>
             </div>
-            </div>  
-       </footer> 
+        </div>
+    </footer> 
     </div>
 </body>
 
