--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./assets/sass/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5f93c80563.js" crossorigin="anonymous"></script>
 </head>
@@ -60,7 +59,7 @@
                 </div>
                 <div class="restautant-cards">
                     <article class="restaurant-card">
-                        <a href="#" class="restaurant-card__link">
+                        <a class="restaurant-card__link">
                             <div class="restaurant-card__image">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat de La palette du goût">
                             <span class="restaurant-card__new-label">Nouveau</span>
@@ -70,9 +69,10 @@
                                         <h3 class="restaurant-card__name">La palette du goût</h3>
                                         <p class="restaurant-card__location">Ménilmontant</p>
                                     </div>
-                                    <div class="restaurant-card__favorite">
-                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></span>
-                                    </div>                                
+                                    <button class="restaurant-card__favorite-button">
+                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                        <span class="restaurant-card__new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                                    </button>                                
                             </div>
                         </a>
                     </article>
@@ -87,9 +87,9 @@
                                         <h3 class="restaurant-card__name">La note enchantée</h3>
                                         <p class="restaurant-card__location">Charonne</p>
                                     </div>
-                                    <div class="restaurant-card__favorite">
-                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></i></span>
-                                    </div>                                
+                                    <button class="restaurant-card__favorite-button">
+                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                    </button>                               
                             </div>
                         </a>
                     </article>
@@ -103,9 +103,9 @@
                                         <h3 class="restaurant-card__name">À la française</h3>
                                         <p class="restaurant-card__location">Cité rouge</p>
                                     </div>
-                                    <div class="restaurant-card__favorite">
-                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></span>
-                                    </div>                                
+                                    <button class="restaurant-card__favorite-button">
+                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                    </button>                              
                             </div>
                         </a>
                     </article>
@@ -119,9 +119,9 @@
                                         <h3 class="restaurant-card__name">Le délice des sens</h3>
                                         <p class="restaurant-card__location">Folie-Méricourt</p>
                                     </div>
-                                    <div class="restaurant-card__favorite">
-                                    <span class="restaurant-card__heart"><i class="fa-regular fa-heart fa-lg"></i></span>
-                                    </div>                                
+                                    <button class="restaurant-card__favorite-button">
+                                        <span class="restaurant-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                    </button>                               
                             </div>
                         </a>
                     </article>
