--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="restaurants-cards">
                 <article class="restaurants-card">
-                    <a class="restaurants-card__link">
+                    <a href="./restaurants/La_palette_du_goût.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat de La palette du goût">
                             <span class="restaurants-card__new-label">Nouveau</span>
@@ -76,7 +76,7 @@
                     </a>
                 </article>
                 <article class="restaurants-card">
-                    <a href="#" class="restaurants-card__link">
+                    <a href="./restaurants/La_note_enchantée.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat de La note enchantée">
                             <span class="restaurants-card__new-label">Nouveau</span>
@@ -93,7 +93,7 @@
                     </a>
                 </article>
                 <article class="restaurants-card">
-                    <a href="#" class="restaurants-card__link">
+                    <a href="./restaurants/À_la_française.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat d'À la française">
                         </div>
@@ -109,7 +109,7 @@
                     </a>
                 </article>
                 <article class="restaurants-card">
-                    <a href="#" class="restaurants-card__link">
+                    <a href="./restaurants/Le_délice_des_sens.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
                             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat de Le délice des sens">
                         </div>
