--- a/restaurants/La_note_enchantée.html
+++ b/restaurants/La_note_enchantée.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>La palette du goût - Ohmyfood</title>
+    <title>La note enchantée - Ohmyfood</title>
 
     <link rel="stylesheet" href="../assets/sass/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,11 +23,11 @@
     </header>
     <main class="main">
         <section class="banner">            
-                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat de La note enchantée">
         </section>
         <section class="restaurant">   
             <div class="restaurant__info">
-                <h1 class="restaurant__name">La palette du goût</h1>
+                <h1 class="restaurant__name">La note enchantée</h1>
                 <button class="restaurant__favorite-button">
                     <span class="restaurant__heart"><i class="far fa-heart fa-2x"></i></span>
                 </button>
@@ -39,24 +39,31 @@
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Fricassée d'escargots</h3>
-                            <p class="restaurant__item-description">Au piment d'Espelette</p>
+                            <h3 class="restaurant__item-title">Ravioles de foie gras</h3>
+                            <p class="restaurant__item-description">Accompagnées de leur crème à la truffe</p>
                         </div>
                         <div class="restaurant__item-price">25€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Foie gras de canard mi-cuit</h3>
-                            <p class="restaurant__item-description">Et ses copeaux de truffe noire</p>
+                            <h3 class="restaurant__item-title">Caviar osciètre</h3>
+                            <p class="restaurant__item-description">Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Œuf au plat</h3>
-                            <p class="restaurant__item-description">Assaisonné à la truffe sur lit de caviar</p>
+                            <h3 class="restaurant__item-title">Homard et espuma de potiron</h3>
+                            <p class="restaurant__item-description">Marinés aux zestes d'orange</p>
                         </div>
                         <div class="restaurant__item-price">20€</div>
+                    </div>
+                    <div class="restaurant__item">
+                        <div class="restaurant__item-info">
+                            <h3 class="restaurant__item-title">Foie gras de canard cuit entier</h3>
+                            <p class="restaurant__item-description">Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="restaurant__item-price">35€</div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -65,22 +72,22 @@
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Filet de bœuf aux herbes</h3>
-                            <p class="restaurant__item-description">Accompagné de sa ribambelle de légumes</p>
+                            <h3 class="restaurant__item-title">Noix de coquilles Saint-Jacques</h3>
+                            <p class="restaurant__item-description">Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="restaurant__item-price">40€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Parmentier de queue de bœuf</h3>
-                            <p class="restaurant__item-description">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="restaurant__item-title">Langoustine poêlée</h3>
+                            <p class="restaurant__item-description">Purée de patate douce</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Filet de turbot</h3>
-                            <p class="restaurant__item-description">Aux agrumes</p>
+                            <h3 class="restaurant__item-title">Mijoté de queue de bœuf</h3>
+                            <p class="restaurant__item-description">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="restaurant__item-price">44€</div>
                     </div>
@@ -91,22 +98,22 @@
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Paris-Brest</h3>
-                            <p class="restaurant__item-description">Revisité</p>
+                            <h3 class="restaurant__item-title">Macaron noisette et chocolat</h3>
+                            <p class="restaurant__item-description">Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="restaurant__item-price">18€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Macaron au chocolat d'exception</h3>
-                            <p class="restaurant__item-description">Et glace à la vanille de Madagascar</p>
+                            <h3 class="restaurant__item-title">Baba au rhum revisité</h3>
+                            <p class="restaurant__item-description">Avec son coulis de citron</p>
                         </div>
                         <div class="restaurant__item-price">22€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Mousse au chocolat</h3>
-                            <p class="restaurant__item-description">Au piment d'Espelette et à la truffe noire</p>
+                            <h3 class="restaurant__item-title">Tarte au citron meringuée</h3>
+                            <p class="restaurant__item-description">Déstructurée</p>
                         </div>
                         <div class="restaurant__item-price">23€</div>
                     </div>
