--- a/restaurants/À_la_française.html
+++ b/restaurants/À_la_française.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>La palette du goût - Ohmyfood</title>
+    <title>À la française - Ohmyfood</title>
 
     <link rel="stylesheet" href="../assets/sass/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,11 +23,11 @@
     </header>
     <main class="main">
         <section class="banner">            
-                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat d'À la française">
         </section>
         <section class="restaurant">   
             <div class="restaurant__info">
-                <h1 class="restaurant__name">La palette du goût</h1>
+                <h1 class="restaurant__name">À la française</h1>
                 <button class="restaurant__favorite-button">
                     <span class="restaurant__heart"><i class="far fa-heart fa-2x"></i></span>
                 </button>
@@ -39,22 +39,22 @@
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Fricassée d'escargots</h3>
-                            <p class="restaurant__item-description">Au piment d'Espelette</p>
+                            <h3 class="restaurant__item-title">Tartare de poulpe acidulé</h3>
+                            <p class="restaurant__item-description">Aux zestes d'orange</p>
                         </div>
                         <div class="restaurant__item-price">25€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Foie gras de canard mi-cuit</h3>
-                            <p class="restaurant__item-description">Et ses copeaux de truffe noire</p>
+                            <h3 class="restaurant__item-title">Velouté de légumes d'antan</h3>
+                            <p class="restaurant__item-description">Carotte, panais, topinambour</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Œuf au plat</h3>
-                            <p class="restaurant__item-description">Assaisonné à la truffe sur lit de caviar</p>
+                            <h3 class="restaurant__item-title">Soupe à l'oignon</h3>
+                            <p class="restaurant__item-description">Revisitée</p>
                         </div>
                         <div class="restaurant__item-price">20€</div>
                     </div>
@@ -65,22 +65,22 @@
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Filet de bœuf aux herbes</h3>
-                            <p class="restaurant__item-description">Accompagné de sa ribambelle de légumes</p>
+                            <h3 class="restaurant__item-title">Coquilles Saint-Jacques</h3>
+                            <p class="restaurant__item-description">Accompagnées d'une purée de panais</p>
                         </div>
                         <div class="restaurant__item-price">40€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Parmentier de queue de bœuf</h3>
-                            <p class="restaurant__item-description">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="restaurant__item-title">Magret de canard</h3>
+                            <p class="restaurant__item-description">Et parmentier de pommes de terre</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Filet de turbot</h3>
-                            <p class="restaurant__item-description">Aux agrumes</p>
+                            <h3 class="restaurant__item-title">Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p class="restaurant__item-description">Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <div class="restaurant__item-price">44€</div>
                     </div>
@@ -91,22 +91,22 @@
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Paris-Brest</h3>
-                            <p class="restaurant__item-description">Revisité</p>
+                            <h3 class="restaurant__item-title">Pétales de violettes glacés</h3>
+                            <p class="restaurant__item-description">Et purée de noisettes</p>
                         </div>
                         <div class="restaurant__item-price">18€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Macaron au chocolat d'exception</h3>
-                            <p class="restaurant__item-description">Et glace à la vanille de Madagascar</p>
+                            <h3 class="restaurant__item-title">Fondant au chocolat</h3>
+                            <p class="restaurant__item-description">Revisité</p>
                         </div>
                         <div class="restaurant__item-price">22€</div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
-                            <h3 class="restaurant__item-title">Mousse au chocolat</h3>
-                            <p class="restaurant__item-description">Au piment d'Espelette et à la truffe noire</p>
+                            <h3 class="restaurant__item-title">Millefeuille croustillant</h3>
+                            <p class="restaurant__item-description">Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="restaurant__item-price">23€</div>
                     </div>
