--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 <p class="restaurants-card__location">Ménilmontant</p>
                             </div>
                             <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
-                                <span class="restaurants-card__new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
                             </button>                                
                         </div>
                     </a>
@@ -87,7 +87,8 @@
                                 <p class="restaurants-card__location">Charonne</p>
                             </div>
                             <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
                             </button>                               
                         </div>
                     </a>
@@ -103,7 +104,8 @@
                                 <p class="restaurants-card__location">Cité rouge</p>
                             </div>
                             <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
                             </button>                              
                         </div>
                     </a>
@@ -119,7 +121,8 @@
                                 <p class="restaurants-card__location">Folie-Méricourt</p>
                             </div>
                             <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
                             </button>                               
                         </div>
                     </a>
