--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -28,8 +28,9 @@
         <section class="restaurant">   
             <div class="restaurant__info">
                 <h1 class="restaurant__name">La palette du goût</h1>
-                <button class="restaurant__favorite-button">
-                    <span class="restaurant__heart"><i class="far fa-heart fa-2x"></i></span>
+                <button class="restaurants-card__favorite-button">
+                    <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                    <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
                 </button>
             </div>           
             <div class="restaurant__menu">
