Heart middle fill

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                                 <h3 class="restaurants-card__name">La palette du goût</h3>
                                 <p class="restaurants-card__location">Ménilmontant</p>
                             </div>
-                            <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
-                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
-                            </button>                                
                         </div>
                     </a>
-                </article>
+                    <button class="restaurants-card__favorite-button" type="button">
+                        <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                        <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                    </button>
+                </article>               
                 <article class="restaurants-card">
                     <a href="./restaurants/La_note_enchantée.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
@@ -86,13 +86,13 @@
                                 <h3 class="restaurants-card__name">La note enchantée</h3>
                                 <p class="restaurants-card__location">Charonne</p>
                             </div>
-                            <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
-                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
-                            </button>                               
                         </div>
                     </a>
-                </article>
+                    <button class="restaurants-card__favorite-button" type="button">
+                        <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                        <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                    </button>
+                </article>                
                 <article class="restaurants-card">
                     <a href="./restaurants/À_la_française.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
@@ -103,13 +103,13 @@
                                 <h3 class="restaurants-card__name">À la française</h3>
                                 <p class="restaurants-card__location">Cité rouge</p>
                             </div>
-                            <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
-                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
-                            </button>                              
                         </div>
                     </a>
-                </article>
+                    <button class="restaurants-card__favorite-button" type="button">
+                        <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                        <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                    </button>
+                </article>               
                 <article class="restaurants-card">
                     <a href="./restaurants/Le_délice_des_sens.html" class="restaurants-card__link">
                         <div class="restaurants-card__image">
@@ -120,13 +120,13 @@
                                 <h3 class="restaurants-card__name">Le délice des sens</h3>
                                 <p class="restaurants-card__location">Folie-Méricourt</p>
                             </div>
-                            <button class="restaurants-card__favorite-button">
-                                <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
-                                <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
-                            </button>                               
                         </div>
                     </a>
-                </article>
+                    <button class="restaurants-card__favorite-button" type="button">
+                        <span class="restaurants-card__favorite-button--heart"><i class="far fa-heart fa-2x"></i></span>
+                        <span class="restaurants-card__favorite-button--new-icon"><i class="fa-solid fa-heart fa-2x"></i></span>
+                    </button>
+                </article>                
             </div>
         </section>  
     </main>
