menu page slider

--- a/restaurants/Le_délice_des_sens.html
+++ b/restaurants/Le_délice_des_sens.html
@@ -43,6 +43,7 @@
                             <p class="restaurant__item-description">Assaisonné au yuzu</p>
                         </div>
                         <div class="restaurant__item-price">25€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -50,6 +51,7 @@
                             <p class="restaurant__item-description">Et sa farandole de petits légumes</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -57,6 +59,7 @@
                             <p class="restaurant__item-description">Aux truffes</p>
                         </div>
                         <div class="restaurant__item-price">20€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -69,6 +72,7 @@
                             <p class="restaurant__item-description">Et sa crème de truffe</p>
                         </div>
                         <div class="restaurant__item-price">40€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -76,6 +80,7 @@
                             <p class="restaurant__item-description">Et ses légumes de saison</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -83,6 +88,7 @@
                             <p class="restaurant__item-description">Et sa purée de panais</p>
                         </div>
                         <div class="restaurant__item-price">44€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -95,6 +101,7 @@
                             <p class="restaurant__item-description">Du chef</p>
                         </div>
                         <div class="restaurant__item-price">18€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -102,6 +109,7 @@
                             <p class="restaurant__item-description">Revisitée</p>
                         </div>
                         <div class="restaurant__item-price">22€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -109,6 +117,7 @@
                             <p class="restaurant__item-description">À la noisette</p>
                         </div>
                         <div class="restaurant__item-price">23€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <div class="restaurant__order">
