--- a/restaurants/La_note_enchantée.html
+++ b/restaurants/La_note_enchantée.html
@@ -43,6 +43,7 @@
                             <p class="restaurant__item-description">Accompagnées de leur crème à la truffe</p>
                         </div>
                         <div class="restaurant__item-price">25€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -50,6 +51,7 @@
                             <p class="restaurant__item-description">Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -57,6 +59,7 @@
                             <p class="restaurant__item-description">Marinés aux zestes d'orange</p>
                         </div>
                         <div class="restaurant__item-price">20€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -64,6 +67,7 @@
                             <p class="restaurant__item-description">Confiture de figue et pain toasté</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -76,6 +80,7 @@
                             <p class="restaurant__item-description">Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="restaurant__item-price">40€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -83,6 +88,7 @@
                             <p class="restaurant__item-description">Purée de patate douce</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -90,6 +96,7 @@
                             <p class="restaurant__item-description">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="restaurant__item-price">44€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -102,6 +109,7 @@
                             <p class="restaurant__item-description">Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="restaurant__item-price">18€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -109,6 +117,7 @@
                             <p class="restaurant__item-description">Avec son coulis de citron</p>
                         </div>
                         <div class="restaurant__item-price">22€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -116,6 +125,7 @@
                             <p class="restaurant__item-description">Déstructurée</p>
                         </div>
                         <div class="restaurant__item-price">23€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <div class="restaurant__order">
