--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -44,6 +44,7 @@
                             <p class="restaurant__item-description">Au piment d'Espelette</p>
                         </div>
                         <div class="restaurant__item-price">25€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -51,6 +52,7 @@
                             <p class="restaurant__item-description">Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -58,6 +60,7 @@
                             <p class="restaurant__item-description">Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="restaurant__item-price">20€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -70,6 +73,7 @@
                             <p class="restaurant__item-description">Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="restaurant__item-price">40€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -77,6 +81,7 @@
                             <p class="restaurant__item-description">À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="restaurant__item-price">35€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -84,6 +89,7 @@
                             <p class="restaurant__item-description">Aux agrumes</p>
                         </div>
                         <div class="restaurant__item-price">44€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <article class="restaurant__category">
@@ -96,6 +102,7 @@
                             <p class="restaurant__item-description">Revisité</p>
                         </div>
                         <div class="restaurant__item-price">18€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -103,6 +110,7 @@
                             <p class="restaurant__item-description">Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="restaurant__item-price">22€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <div class="restaurant__item">
                         <div class="restaurant__item-info">
@@ -110,6 +118,7 @@
                             <p class="restaurant__item-description">Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="restaurant__item-price">23€</div>
+                        <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
                 <div class="restaurant__order">
