animation page return, menu apparition

--- a/restaurants/Le_délice_des_sens.html
+++ b/restaurants/Le_délice_des_sens.html
@@ -34,7 +34,7 @@
                 </button>
             </div>           
             <div class="restaurant__menu">
-                <article class="restaurant__category">
+                <article class="restaurant__category fade-in">
                     <div class="restaurant__category-title">
                         <h2>ENTRÉES</h2>
                     </div>
@@ -63,7 +63,7 @@
                         <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
-                <article class="restaurant__category">
+                <article class="restaurant__category fade-in--second">
                     <div class="restaurant__category-title">
                         <h2>Plats</h2>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="restaurant__add-selection"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </article>
-                <article class="restaurant__category">
+                <article class="restaurant__category fade-in--third">
                     <div class="restaurant__category-title">
                         <h2>Desserts</h2>
                     </div>
