Responsive main page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
-    <main>
+    <main class="main">
         <section class="location">
             <div class="location_zone">
                 <i class="fa-solid fa-location-dot"></i>
@@ -54,7 +54,7 @@
         </section>
         <section class="restaurants">
             <div>
-                <h2 id="anchor-mainrestaurants">restaurants</h2>
+                <h2 id="anchor-mainrestaurants">Restaurants</h2>
             </div>
             <div class="restaurants-cards">
                 <article class="restaurants-card">
