--- a/restaurants/À_la_française.html
+++ b/restaurants/À_la_française.html
@@ -22,9 +22,9 @@
             <img class="header__logo" src="../assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
     <main class="main">
-        <section class="banner">            
+        <div class="banner">            
                 <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat d'À la française">
-        </section>
+        </div>
         <section class="restaurant">   
             <div class="restaurant__info">
                 <h1 class="restaurant__name">À la française</h1>
