--- a/restaurants/La_note_enchantée.html
+++ b/restaurants/La_note_enchantée.html
@@ -22,9 +22,9 @@
             <img class="header__logo" src="../assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
     <main class="main">
-        <section class="banner">            
+        <div class="banner">            
                 <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat de La note enchantée">
-        </section>
+        </div>
         <section class="restaurant">   
             <div class="restaurant__info">
                 <h1 class="restaurant__name">La note enchantée</h1>
