--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -22,9 +22,9 @@
             <img class="header__logo" src="../assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
     <main class="main">
-        <section class="banner">            
+        <div class="banner">            
                 <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-        </section>
+        </div>
         <section class="restaurant">   
             <div class="restaurant__info">
                 <h1 class="restaurant__name">La palette du goût</h1>
