--- a/restaurants/Le_délice_des_sens.html
+++ b/restaurants/Le_délice_des_sens.html
@@ -22,9 +22,9 @@
             <img class="header__logo" src="../assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
     <main class="main">
-        <section class="banner">            
+        <div class="banner">            
                 <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat de Le délice des sens">
-        </section>
+        </div>
         <section class="restaurant">   
             <div class="restaurant__info">
                 <h1 class="restaurant__name">Le délice des sens</h1>
