--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <div id="loader">
-        <div id="icon">
-          <div class="text-container">ohmyfood</div>
+    <div class="loader">
+        <div class="loader__icon">
+            <div class="loader__text-container">ohmyfood</div>
         </div>
-      </div>     
+    </div>
     <header class="header">
         <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="logo de ohmyfood">
     </header>
