fix validation html img alt=

--- a/restaurants/La_palette_du_goût.html
+++ b/restaurants/La_palette_du_goût.html
@@ -23,7 +23,7 @@
     </header>
     <main class="main">
         <div class="banner">            
-                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat de La palette du goût">
         </div>
         <section class="restaurant">   
             <div class="restaurant__info">
